--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "raganork-md",
+  "name": "XCRLD-BOT",
   "version": "4.0.0",
-  "description": "Raganork whatsapp bot- Multi device version.",
+  "description": "XCRLD-BOT.",
   "scripts": {
     "start": "pm2 start . --attach --name Raganork"
   },
